Issue#299(Course | Correct the Paper Progress) make buttons visible below the graph

--- a/app/MyApp/app/Home-Urdu.css
+++ b/app/MyApp/app/Home-Urdu.css
@@ -532,6 +532,8 @@ body{
     position: relative;
 }
 .Graphbutton{
+    height: 100%;
+    width: 100%;
     float: right;
     margin-top: 20px;
     position: relative;
