--- a/app/MyApp/app/Home.css
+++ b/app/MyApp/app/Home.css
@@ -915,6 +915,8 @@ margin-left: 259px;
 	width: 940px;
 }
 .Graphbutton{
+    height: 100%;
+    width: 100%;
 	float: left;
 	margin-top: 20px;
 	position: relative;
